Fixes margin issue spacing on side of body element

--- a/styles/styling.css
+++ b/styles/styling.css
@@ -8,6 +8,7 @@
 body {
   font-family: "Roboto", sans-serif;
   background: var(--background-color);
+  margin: 0;
 }
 
 h1,
